# CppPrimerProjects

./: .gitignore  CMakeLists.txt  main.cpp
Account/: Account.cpp  Account.h  CMakeLists.txt
BookManager/src/: Book.cpp  Book.hpp  BookManager.cpp  BookManager.sln  BookManager.vcxproj  BookManager.vcxproj.filters  Library.cpp  Library.hpp  test.txt
BookManager/tests/: BookManagerTests.vcxproj  BookManagerTests.vcxproj.filters  BookTests.cpp  LibraryTests.cpp  TestLibrary.txt
Chapter_12/: CMakeLists.txt  Exercise_12_20.txt  main.cpp
Chapter_12/Exercises_section_12_1_1/: 12.1.md  12.3.md  12.4.md  12.5.md
Chapter_12/Exercises_section_12_1_2/: 12.6.cpp  12.7.cpp  12.8.md  12.9.md  CMakeLists.txt  section_interface.h
Chapter_12/Exercises_section_12_1_3/: 12.10.md  12.11.md  12.12.md  12.13.md  CMakeLists.txt
Chapter_12/Exercises_section_12_1_4/: CMakeLists.txt  main.cpp
Chapter_12/Exercises_section_12_1_5/: 12.18.md  CMakeLists.txt  main.cpp
Chapter_12/Exercises_section_12_1_6/: 12.21.md
Chapter_12/Exercises_section_12_2_1/: 12.23.cpp  12.24.cpp  12.25.md  CMakeLists.txt  interface.h  main.cpp
Chapter_12/Exercises_section_12_2_2/: 12.26.cpp  CMakeLists.txt
Chapter_12/Section_12_3_Text-Query_program/: CMakeLists.txt  QueryResult.cpp  QueryResult.h  TextQuery.cpp  TextQuery.h  main.cpp
Chapter_12/Section_12_3_Text-Query_program/text_examples/: Fox.txt
Chapter_12/StrBlob/: CMakeLists.txt  ConstStrBlobPtr.cpp  ConstStrBlobPtr.h  StrBlob.cpp  StrBlob.h  StrBlobPtr.cpp  StrBlobPtr.h  test.cpp  test.h
Chapter_13/Exercises_section_13_1_1/: 13.1.md  13.2.md  13.3.md  13.4.md  13.5.cpp  CMakeLists.txt
Chapter_13/Exercises_section_13_1_2/: 13.6.md  13.7.md  13.8.cpp  CMakeLists.txt
Chapter_7/: 7.43.cpp  7.44.md  7.45.md  7.46.md  CMakeLists.txt
Debug/: CMakeLists.txt  Debug.h
Person/: CMakeLists.txt  Person.cpp  Person.h  Sales_data.h  main.cpp
SalesData/: CMakeLists.txt  Sales_data.cpp  Sales_data.h
ScreenWindow/: CMakeLists.txt  Screen.cpp  Screen.h  Window_mgr.cpp  Window_mgr.h
